src/httpserver/qhttpserverresponse.cpp
@@ -37,6 +37,7 @@
 #include <QtCore/qjsondocument.h>
 #include <QtCore/qjsonobject.h>
 #include <QtCore/qmimedatabase.h>
+#include <QtNetwork/qtcpsocket.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -353,6 +354,9 @@ QVector<QByteArray> QHttpServerResponse::headers(const QByteArray &name) const
 void QHttpServerResponse::write(QHttpServerResponder &&responder) const
 {
     Q_D(const QHttpServerResponse);
+    if (responder.socket()->state() != QAbstractSocket::ConnectedState)
+        return;
+
     responder.writeStatusLine(d->statusCode);
 
     for (auto &&header : d->headers)
